--- a/advice/advice.css
+++ b/advice/advice.css
@@ -1,13 +1,37 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
 	background-color: rgb(231, 201, 155);
 	padding: 2em;
 }
 
-.advice {
+.advice, .advice-history {
 	min-height: 3em;
 	border: 1px solid black;
 	border-radius: 1em;
 	margin-top: 1em;
 	background-color: antiquewhite;
 	padding: 1em;
+}
+
+.advice-history {
+	list-style-type: none;
+
+}
+.advice-history > li {
+	/* background-color: rgb(231, 201, 155); */
+	border: 1px solid rgb(231, 201, 155);
+	border-radius: 0.3em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	padding: 0.5em;
+	/* line-height: 3em; */
+}
+.advice-history > :first-child {
+	margin-top: 0;
+}
+.advice-history > :last-child {
+	margin-bottom: 0;
 }
